# tidy-html5

./: .gitignore  .gitmodules  .nojekyll  .travis.yml  CMakeLists.txt  CNAME  CODESTYLE.md  CONTRIBUTING.md  Dockerfile  Gemfile  Makefile  Package.swift  README.html  README.md  VERSION  VERSION.md  _config.yml  _index._md  completion.bash  html5-for-html-tidy.patch-2  index.html  quickref.html  test.html  tidy.1  tidy.1.txt  tidy.pc.cmake.in  version.txt
.github/workflows/: api_test.yml  build_and_test.yml  publish_binaries.yml  publish_linux+windows.yml  publish_macos.yml
README/: API_AND_NAMESPACE.md  ATTRIBUTES.md  BRANCHES.md  BUILD.md  CHANGELOG.md  CODESTYLE.md  CONTRIBUTING.md  ELEMENTS.md  LICENSE.md  LICENSE.txt  LOCALIZE.md  MESSAGES.md  OPTIONS.md  README.html  README.md  RELEASE.html  RELEASE.md  TAGS.md  TESTING.md  VERSION.md
_includes/: page_generator.html
_includes/css/: base.css  main.css
_layouts/: default.html
_sass/: htacg.scss
accessibility/: index.html
accessibility/_posts/: 2000-01-01-access_intro_doc.md  2000-02-01-access_doc.md
api/: index.html
api/_posts/: 1971-01-01-part_intro.md  1971-02-01-part_quickref.md  1971-03-01-part_apiref.md
api/tidylib_api_4.9.35/: README_8md_source.html  annotated.js  buffio_8h.html  buffio_8h.js  buffio_8h_struct__TidyBuffer.js  deprecated.html  functions.html  functions_func.html  globals.html  globals_eval.js  group__AttrGet.html  group__AttrGet.js  group__AttrIsAttributeName.js  group__Attribute.js  group__Basic.html  group__Clean.js  group__Configuration.html  group__Configuration.js  group__IO.js  group__IO_struct__TidyOutputSink.js  group__Memory_struct__TidyAllocator.js  group__Memory_struct__TidyAllocatorVtbl.js  group__NodeAsk.js  group__NodeIsElementName.html  group__NodeIsElementName.js  group__Opaque.html  group__Opaque.js  group__Parse.js  history.html  navtreeindex0.js  navtreeindex1.js  navtreeindex3.js  navtreeindex4.js  page__featured__options_8dox.html  page__history_8dox.html  page__tidy__config_8dox.html  page__tidy__scripting_8dox.html  page__tidylib_8dox.html  tabs.css  tidy_8h.html  (+4 more)
console/: Info.plist  Info.plist.in  tab2space.1  tab2space.c  test71.cxx  tidy.c
developer/: index.html
developer/_posts/: 2000-01-01-part_develop_intro.md  2000-02-01-part_design.md  2000-03-01-part_implement.md  2000-04-01-part_sample_program.md  2000-05-01-part_app_notes.md  2000-06-01-part_api_docs.md
docs/: API_AND_NAMESPACE.md  CODESTYLE.md  MESSAGES.md  OPTIONS.md  TESTING.md  VERSION.md
documentation/: .gitignore  README.md  build_docs.sh  doxygen.cfg  quickref.html  quickref.include.xsl  quickref.xsl  style.css  tidy.cfg  tidy1.xsl  tidy1.xsl.in
documentation/_posts/: 2000-01-01-part_intro.md  2000-01-01-part_intro_doc.md  2000-02-01-part_what.md  2000-03-01-part_running.md  2000-04-01-part_options_config.md  2000-05-01-part_features_notes.md  2000-06-01-part_building.md  2000-07-01-part_faq.md  2000-08-01-part_license.md
documentation/examples/: example.1.c
documentation/pages/: main_page.dox  page_featured_options.dox  page_quickref.dox  page_tidy.dox  page_tidy_config.dox  page_tidy_quickstart.dox  page_tidy_scripting.dox
experimental/: TidyNodeIter.c  TidyNodeIter.h  httpio.c  httpio.h
htmldoc/: Overview.html  doxygen.cfg  faq.html  license.html  pending.html  quickref-html.xsl  quickref.css  quickref.html  quickref.xsl  release-notes.html  tidy1.sh  tidy1.xsl
htmldoc/api/: annotated.html  buffio_8h.html  buffio_8h.js  buffio_8h_source.html  classes.html  deprecated.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__AttrGet.html  group__AttrGet.js  group__AttrGetAttributeName.html  group__AttrIsAttributeName.html  group__Attribute.html  group__Basic.html  group__Basic.js  group__Clean.html  group__Configuration.html  group__Configuration.js  group__IO.html  group__IO.js  group__Memory.html  group__NodeAsk.html  group__NodeAsk.js  group__Opaque.html  (+27 more)
include/: attrask.c  buffio.h  module.modulemap  platform.h  tidy.h  tidybuffio.h  tidyenum.h  tidyplatform.h
localize/: .gitignore  Gemfile  README.md  language_ll_cc.h.erb  poconvert.rb
man/: .gitignore  README.md  tidy1.xsl.in
plus/: index.html
regression_testing/: Gemfile  README.md  test.rb
snap/: .editorconfig  .gitignore  README.md  snapcraft.yaml
src/: access.c  access.h  alloc.c  attrapi.c  attrask.c  attrdict.c  attrdict.h  attrget.c  attrs.c  attrs.h  buffio.c  charsets.c  charsets.h  clean.c  clean.h  config.c  config.h  entities.c  entities.h  fileio.c  fileio.h  forward.h  gdoc.c  gdoc.h  iconvtc.c  iconvtc.h  istack.c  language.c  language.h  language_de.h  language_en.h  language_en_gb.h  language_es.h  language_es_mx.h  language_fr.h  language_pt_br.h  language_zh_cn.h  lexer.c  lexer.h  localize.c  (+29 more)
test/: .gitignore  CNAME  Gemfile  README.md  _config.yml  accesscases.txt  acctest.cmd  alltest.cmd  alltest1.cmd  alltest2.bat  alltestc.bat  cmp.sh  index.html  intest.txt  onetest.cmd  onetest2.bat  onetesta.cmd  report-5.1.8.txt  t1.bat  t1.sh  take_me_apart.html  testaccess.sh  testaccessone.sh  testall.sh  testcases.txt  testinfo.txt  testone.sh  testxml.sh  xmlcases.txt  xmltest.cmd
tidylib_api/: README_8md.html  README_8md_source.html  annotated.html  annotated.js  buffio_8h.html  buffio_8h_source.html  building_tidy.html  classes.html  deprecated.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  featured_options.html  files.html  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_eval_t.html  globals_func.html  globals_func.js  globals_func_t.html  globals_n.html  globals_o.html  globals_t.html  globals_type.html  group__AttrGet.html  group__AttrGetAttributeName.html  group__AttrGetAttributeName.js  group__AttrIsAttributeName.html  group__Attribute.html  group__Attribute.js  group__Basic.html  group__Basic.js  group__Clean.html  group__Clean.js  (+71 more)
tools/: README.md
(+2016 files in other folders)
